--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,7 @@ exclude =
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
     */settings.py:E501
+
+
+[isort]
+src_paths=yatube_api
